--- a/style.css
+++ b/style.css
@@ -1,39 +1,34 @@
-/*
-Copyright (c) 2020 周嘉泰
-This file is licensed under BSD 4-Clause License.
-*/
-
 body{
-    background-color: ghostwhite;
-    display: block;
+    margin: 0 auto;
+    max-width: 1024px;
+    background-color: white;
 }
 
 .inner{
-    background-color: snow;
+    background-color: floralwhite;
+    padding: 5px 25px 5px;
 }
 
-header{
+a.nav{
+    padding: 10px 45px;
     text-align: center;
+    font-size: 150%;
+    text-decoration-line: none;
+    color: white;
+}
+
+a.now{
+    background-color: saddlebrown;
 }
 
 nav{
-    text-align: center;
-    margin: 4px;
-    font-size: 125%;
-}
-
-nav>a{
-    color: #005d80;
-    text-decoration-line: none;
-}
-
-.main{
-    padding-left: 30px;
-    padding-right: 30px;
+    background-color: brown;
+    padding: 10px 0px;
+    width: 1024px;
 }
 
 footer{
     text-align: center;
-    margin: 4px;
     font-size: 90%;
+    padding-bottom: 5px;
 }
